[tool.poetry]
name = "soknob-listener"
version = "0.1.0"
description = ""
authors = ["Daniel Hirsch <daniel@hirschtechsolutions.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
requests = "^2.25.1"
requests_oauthlib = "^1.3.0"
oauthlib = "^3.1.0"
simplejson = "^3.17.2"
redis = "^3.5.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
